--- a/notebooks/in_situ_sampling_design.ipynb
+++ b/notebooks/in_situ_sampling_design.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.10 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "f0e28a9f57cc69af1651c7aedc5defce74c820bac7dd44d1c823cf08787b6b31"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -28,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "# LBRAT2104 - In-Situ Sampling Design"
+    "# In-Situ Sampling Design"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -97,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "         ID  CROP                     LC  CODE  IRRIGATION   area  \\\n0      1877     1  Maize (for livestock)   201           0  10760   \n1      1878     1  Common wheat (winter)   311           0  17296   \n2      1879     1  Maize (for livestock)   201           0   5088   \n3      1880     1  Grassland (temporary)    62           0   9614   \n4      3251     1        Barley (winter)   321           0   9961   \n..      ...   ...                    ...   ...         ...    ...   \n325  183204     0        Not agriculture    20           0  12102   \n326  183206     0        Not agriculture    19           0   6422   \n327  183208     0        Not agriculture    19           0   5698   \n328  183210     0        Not agriculture     6           0   7929   \n329  183211     0        Not agriculture     6           0  10589   \n\n                                              geometry  pix_count  \n0    POLYGON ((634736.092 5591240.943, 634789.895 5...        254  \n1    POLYGON ((635007.971 5591764.526, 635051.831 5...        585  \n2    POLYGON ((635206.957 5591341.834, 635209.723 5...        262  \n3    POLYGON ((635016.863 5591076.352, 635026.482 5...        166  \n4    POLYGON ((634719.083 5590523.686, 634720.398 5...        625  \n..                                                 ...        ...  \n325  POLYGON ((634030.058 5595825.237, 634031.095 5...         50  \n326  POLYGON ((627815.480 5595734.706, 627814.517 5...        128  \n327  POLYGON ((628489.484 5595844.131, 628491.520 5...         66  \n328  POLYGON ((632038.546 5595956.541, 632042.544 5...        136  \n329  POLYGON ((635833.726 5596065.489, 635836.780 5...        104  \n\n[330 rows x 8 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>CROP</th>\n      <th>LC</th>\n      <th>CODE</th>\n      <th>IRRIGATION</th>\n      <th>area</th>\n      <th>geometry</th>\n      <th>pix_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1877</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>10760</td>\n      <td>POLYGON ((634736.092 5591240.943, 634789.895 5...</td>\n      <td>254</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1878</td>\n      <td>1</td>\n      <td>Common wheat (winter)</td>\n      <td>311</td>\n      <td>0</td>\n      <td>17296</td>\n      <td>POLYGON ((635007.971 5591764.526, 635051.831 5...</td>\n      <td>585</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1879</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>5088</td>\n      <td>POLYGON ((635206.957 5591341.834, 635209.723 5...</td>\n      <td>262</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1880</td>\n      <td>1</td>\n      <td>Grassland (temporary)</td>\n      <td>62</td>\n      <td>0</td>\n      <td>9614</td>\n      <td>POLYGON ((635016.863 5591076.352, 635026.482 5...</td>\n      <td>166</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3251</td>\n      <td>1</td>\n      <td>Barley (winter)</td>\n      <td>321</td>\n      <td>0</td>\n      <td>9961</td>\n      <td>POLYGON ((634719.083 5590523.686, 634720.398 5...</td>\n      <td>625</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>183204</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>20</td>\n      <td>0</td>\n      <td>12102</td>\n      <td>POLYGON ((634030.058 5595825.237, 634031.095 5...</td>\n      <td>50</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>183206</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>6422</td>\n      <td>POLYGON ((627815.480 5595734.706, 627814.517 5...</td>\n      <td>128</td>\n    </tr>\n    <tr>\n      <th>327</th>\n      <td>183208</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>5698</td>\n      <td>POLYGON ((628489.484 5595844.131, 628491.520 5...</td>\n      <td>66</td>\n    </tr>\n    <tr>\n      <th>328</th>\n      <td>183210</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>7929</td>\n      <td>POLYGON ((632038.546 5595956.541, 632042.544 5...</td>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>329</th>\n      <td>183211</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>10589</td>\n      <td>POLYGON ((635833.726 5596065.489, 635836.780 5...</td>\n      <td>104</td>\n    </tr>\n  </tbody>\n</table>\n<p>330 rows × 8 columns</p>\n</div>"
+      "text/plain": "         ID  CROP                     LC  CODE  IRRIGATION    area  \\\n0      1877     1  Maize (for livestock)   201           0   11372   \n1      1878     1  Common wheat (winter)   311           0   25548   \n2      1879     1  Maize (for livestock)   201           0   79139   \n3      1880     1  Grassland (temporary)    62           0   25873   \n4      3251     1        Barley (winter)   321           0   16585   \n..      ...   ...                    ...   ...         ...     ...   \n325  183204     0        Not agriculture    20           0   30502   \n326  183206     0        Not agriculture    19           0   52986   \n327  183208     0        Not agriculture    19           0   56815   \n328  183210     0        Not agriculture     6           0  109914   \n329  183211     0        Not agriculture     6           0   87020   \n\n                                              geometry  pix_count  \n0    POLYGON ((634736.092 5591240.943, 634789.895 5...        254  \n1    POLYGON ((635007.971 5591764.526, 635051.831 5...        585  \n2    POLYGON ((635206.957 5591341.834, 635209.723 5...        262  \n3    POLYGON ((635016.863 5591076.352, 635026.482 5...        166  \n4    POLYGON ((634719.083 5590523.686, 634720.398 5...        625  \n..                                                 ...        ...  \n325  POLYGON ((634030.058 5595825.237, 634031.095 5...         50  \n326  POLYGON ((627815.480 5595734.706, 627814.517 5...        128  \n327  POLYGON ((628489.484 5595844.131, 628491.520 5...         66  \n328  POLYGON ((632038.546 5595956.541, 632042.544 5...        136  \n329  POLYGON ((635833.726 5596065.489, 635836.780 5...        104  \n\n[330 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>CROP</th>\n      <th>LC</th>\n      <th>CODE</th>\n      <th>IRRIGATION</th>\n      <th>area</th>\n      <th>geometry</th>\n      <th>pix_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1877</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>11372</td>\n      <td>POLYGON ((634736.092 5591240.943, 634789.895 5...</td>\n      <td>254</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1878</td>\n      <td>1</td>\n      <td>Common wheat (winter)</td>\n      <td>311</td>\n      <td>0</td>\n      <td>25548</td>\n      <td>POLYGON ((635007.971 5591764.526, 635051.831 5...</td>\n      <td>585</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1879</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>79139</td>\n      <td>POLYGON ((635206.957 5591341.834, 635209.723 5...</td>\n      <td>262</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1880</td>\n      <td>1</td>\n      <td>Grassland (temporary)</td>\n      <td>62</td>\n      <td>0</td>\n      <td>25873</td>\n      <td>POLYGON ((635016.863 5591076.352, 635026.482 5...</td>\n      <td>166</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3251</td>\n      <td>1</td>\n      <td>Barley (winter)</td>\n      <td>321</td>\n      <td>0</td>\n      <td>16585</td>\n      <td>POLYGON ((634719.083 5590523.686, 634720.398 5...</td>\n      <td>625</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>183204</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>20</td>\n      <td>0</td>\n      <td>30502</td>\n      <td>POLYGON ((634030.058 5595825.237, 634031.095 5...</td>\n      <td>50</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>183206</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>52986</td>\n      <td>POLYGON ((627815.480 5595734.706, 627814.517 5...</td>\n      <td>128</td>\n    </tr>\n    <tr>\n      <th>327</th>\n      <td>183208</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>56815</td>\n      <td>POLYGON ((628489.484 5595844.131, 628491.520 5...</td>\n      <td>66</td>\n    </tr>\n    <tr>\n      <th>328</th>\n      <td>183210</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>109914</td>\n      <td>POLYGON ((632038.546 5595956.541, 632042.544 5...</td>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>329</th>\n      <td>183211</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>87020</td>\n      <td>POLYGON ((635833.726 5596065.489, 635836.780 5...</td>\n      <td>104</td>\n    </tr>\n  </tbody>\n</table>\n<p>330 rows × 8 columns</p>\n</div>"
      },
      "metadata": {}
     }
@@ -120,7 +116,7 @@
     "img_temp_tif = f'{output_path}IM_ROI/T31UFR_20200316T104709_B02_10m_ROI.tif'\n",
     "\n",
     "# New file with pixels count for each polygons\n",
-    "in_situ_count_shp = f'{in_situ_file[:-4]}_pixCount.shp'\n",
+    "in_situ_count_shp = f'{in_situ_shp[:-4]}_pixCount.shp'\n",
     "\n",
     "\n",
     "# Zonal Statistics\n",
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +186,7 @@
     "\n",
     "# Open the shapefile with GeoPandas\n",
     "\n",
-    "parcels_gdf = gpd.read_file(in_situ_count_file)\n",
+    "parcels_gdf = gpd.read_file(in_situ_count_shp)\n",
     "\n",
     "#display(parcels_gdf)\n",
     "\n",
@@ -302,8 +298,8 @@
     "\n",
     "\n",
     "print('-- Creating shapefiles')\n",
-    "print(f'----> {shp_cal}')\n",
-    "print(f'----> {shp_val}')\n",
+    "print(f'----> {in_situ_cal_shp}')\n",
+    "print(f'----> {in_situ_val_shp}')\n",
     "\n",
     "parcels_cal_final_gdf.to_file(in_situ_cal_shp)\n",
     "parcels_val_final_gdf.to_file(in_situ_val_shp)\n",
