--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -210,7 +210,7 @@
     "- lry = Lower Right y\n",
     "\n",
     "\n",
-    "<img src=\"Figures_Jupyter/ROI_box.png\" width=\"500\">\n",
+    "<img src=\"figures/ROI_box.png\" width=\"500\">\n",
     "\n",
     "\n"
    ],
