--- a/notebooks/random_forest_classification.ipynb
+++ b/notebooks/random_forest_classification.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# LBRAT2104 - Classification using Random Forest\n",
+    "# Classification using Random Forest\n",
     "\n",
     "In this chapter we will be using the Random Forest implementation provided by the `scikit-learn` library. Scikit-learn is an amazing machine learning library that provides easy and consistent interfaces to many of the most popular machine learning algorithms. It is built on top of the pre-existing scientific Python libraries, including NumPy, SciPy, and matplotlib, which makes it very easy to incorporate into your workflow. The number of available methods for accomplishing any task contained within the library is (in my opinion) its real strength. No single algorithm is best for all tasks under all circumstances, and scikit-learn helps you understand this by abstracting the details of each algorithm to simple consistent interfaces.\n",
     "\n",
