--- a/notebooks/pandas_basics.ipynb
+++ b/notebooks/pandas_basics.ipynb
@@ -5,7 +5,7 @@
    "id": "prompt-india",
    "metadata": {},
    "source": [
-    "# LBRAT2104 - Data Manipulations\n",
+    "# Data Manipulations\n",
     "\n",
     "- Author : Nicolas Deffense\n",
     "- Year : 2020-2021\n",
