--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# LBRAT2104 - Working with GeoPandas\n",
+    "# GeoPandas - Basics\n",
     "\n",
     "`GeoPandas` is an open source project to make working with geospatial data in python easier. `GeoPandas` extends the datatypes used by `Pandas` to allow spatial operations on geometric types.\n",
     "\n",
