--- a/notebooks/in_situ_sampling_design.ipynb
+++ b/notebooks/in_situ_sampling_design.ipynb
@@ -145,7 +145,10 @@
   },
   {
    "source": [
-    "## Sampling Design"
+    "## Sampling Design\n",
+    "\n",
+    "\n",
+    "<img src=\"figures/in_situ_sampling_design.png\" width=\"500\">\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
