--- a/notebooks/loops_multiple_images.ipynb
+++ b/notebooks/loops_multiple_images.ipynb
@@ -5,7 +5,7 @@
    "id": "major-sunglasses",
    "metadata": {},
    "source": [
-    "# LBRAT2104 - Working with multiple images\n",
+    "# Working with multiple images\n",
     "\n",
     "In this Jupyter Notebook, we will see how to apply multiples geometric manipulations on a large number of images with the help of the `for` loops.\n",
     "\n",
