--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -51,6 +51,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "from shapely.geometry import Polygon\n",
