--- a/notebooks/in_situ_sampling_design.ipynb
+++ b/notebooks/in_situ_sampling_design.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "# When you are connected to your personnal computer\n",
     "vector_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/'\n",
-    "raster_path = '/Volumes/nbdid-sst-lbrat2104/data/RASTER/'\n",
+    "raster_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
     "output_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
     "\n",
     "\n",
@@ -148,7 +148,7 @@
     "## Sampling Design\n",
     "\n",
     "\n",
-    "<img src=\"figures/in_situ_sampling_design.png\" width=\"500\">\n"
+    "<img src=\"figures/in_situ_sampling_design.png\" width=\"1000\">\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -311,16 +311,9 @@
     "print('-- Creating csv strategies')\n",
     "print(f'----> {csv_strategies}')\n",
     "\n",
-    "classes_strategy_all.to_csv(csv_strategies, index=False)\n",
+    "classes_strategy_all.to_csv(csv_strategies, index=False, sep=';')\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
