in situ preparation

--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.10 64-bit (conda)",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
    "metadata": {
     "interpreter": {
      "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,17 +89,16 @@
     }
    ],
    "source": [
-    "# When you are connected to the computer room\n",
-    "'''\n",
     "grp_letter   = 'X'\n",
     "student_name = 'ndeffense'\n",
     "\n",
+    "# When you are connected to the computer room\n",
+    "'''\n",
     "vector_path = 'X:/data/VECTOR/'\n",
     "output_path = f'X:/GROUP_{grp_letter}/TP/{student_name}/DATA/'\n",
     "'''\n",
     "\n",
     "# When you are connected to your personnal computer\n",
-    "fig_path    = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Jupyter_Notebook/Figures_Jupyter/'\n",
     "vector_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/'\n",
     "output_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
     "\n",
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,9 +183,9 @@
   },
   {
    "source": [
-    "## Creating a new shapefile containing one polygon\n",
+    "## Creating a new shapefile containing your Region of Interest (ROI)\n",
     "\n",
-    "We will create the shapefile of your Region of Interest (ROI) from a set of coordinates.\n",
+    "We will create the shapefile of your ROI from a set of coordinates.\n",
     "\n",
     "#### Choose the CRS of the new shapefile - crs_dst\n",
     "\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -297,14 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "cropland_shp = f'{vector_path}WALLONIA_2018_Cropland.shp'\n",
     "non_crop_shp = f'{vector_path}WALLONIA_2018_Non_cropland.shp'\n",
-    "in_situ_file = f'{in_situ_path}WALLONIA_2018_IN_SITU_ROI.shp'\n",
-    "\n",
     "\n",
     "cropland_gdf = gpd.read_file(cropland_shp)\n",
     "non_crop_gdf = gpd.read_file(non_crop_shp)\n",
@@ -329,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,24 +351,6 @@
   },
   {
    "source": [
-    "### Apply a negative buffer in cropland polygons to avoid border effects"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buf_size = -10\n",
-    "\n",
-    "cropland_gdf.geometry = cropland_gdf.geometry.buffer(buf_size)"
-   ]
-  },
-  {
-   "source": [
     "### Merge both datasets into one"
    ],
    "cell_type": "markdown",
@@ -379,29 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_to_merge = [cropland_gdf, non_crop_gdf]\n",
     "\n",
     "in_situ_gdf = pd.concat(dataset_to_merge, ignore_index=True)"
-   ]
-  },
-  {
-   "source": [
-    "### Add a column with area of each polygons"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_situ_gdf['area'] = gdf.geometry.area.astype(int)"
    ]
   },
   {
@@ -413,19 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "         ID  CROP                     LC  CODE  IRRIGATION  \\\n0      1877     1  Maize (for livestock)   201           0   \n1      1878     1  Common wheat (winter)   311           0   \n2      1879     1  Maize (for livestock)   201           0   \n3      1880     1  Grassland (temporary)    62           0   \n4      3251     1        Barley (winter)   321           0   \n..      ...   ...                    ...   ...         ...   \n325  183204     0        Not agriculture    20           0   \n326  183206     0        Not agriculture    19           0   \n327  183208     0        Not agriculture    19           0   \n328  183210     0        Not agriculture     6           0   \n329  183211     0        Not agriculture     6           0   \n\n                                              geometry    area  \n0    POLYGON ((634736.092 5591240.943, 634789.895 5...   11372  \n1    POLYGON ((635007.971 5591764.526, 635051.831 5...   25548  \n2    POLYGON ((635206.957 5591341.834, 635209.723 5...   79139  \n3    POLYGON ((635016.863 5591076.352, 635026.482 5...   25873  \n4    POLYGON ((634719.083 5590523.686, 634720.398 5...   16585  \n..                                                 ...     ...  \n325  POLYGON Z ((634030.058 5595825.237 0.000, 6340...   30502  \n326  POLYGON Z ((627815.480 5595734.706 0.000, 6278...   52986  \n327  POLYGON Z ((628489.484 5595844.131 0.000, 6284...   56815  \n328  POLYGON Z ((632038.546 5595956.541 0.000, 6320...  109914  \n329  POLYGON Z ((635833.726 5596065.489 0.000, 6358...   87020  \n\n[330 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>CROP</th>\n      <th>LC</th>\n      <th>CODE</th>\n      <th>IRRIGATION</th>\n      <th>geometry</th>\n      <th>area</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1877</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((634736.092 5591240.943, 634789.895 5...</td>\n      <td>11372</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1878</td>\n      <td>1</td>\n      <td>Common wheat (winter)</td>\n      <td>311</td>\n      <td>0</td>\n      <td>POLYGON ((635007.971 5591764.526, 635051.831 5...</td>\n      <td>25548</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1879</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((635206.957 5591341.834, 635209.723 5...</td>\n      <td>79139</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1880</td>\n      <td>1</td>\n      <td>Grassland (temporary)</td>\n      <td>62</td>\n      <td>0</td>\n      <td>POLYGON ((635016.863 5591076.352, 635026.482 5...</td>\n      <td>25873</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3251</td>\n      <td>1</td>\n      <td>Barley (winter)</td>\n      <td>321</td>\n      <td>0</td>\n      <td>POLYGON ((634719.083 5590523.686, 634720.398 5...</td>\n      <td>16585</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>183204</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>20</td>\n      <td>0</td>\n      <td>POLYGON Z ((634030.058 5595825.237 0.000, 6340...</td>\n      <td>30502</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>183206</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>POLYGON Z ((627815.480 5595734.706 0.000, 6278...</td>\n      <td>52986</td>\n    </tr>\n    <tr>\n      <th>327</th>\n      <td>183208</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>POLYGON Z ((628489.484 5595844.131 0.000, 6284...</td>\n      <td>56815</td>\n    </tr>\n    <tr>\n      <th>328</th>\n      <td>183210</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>POLYGON Z ((632038.546 5595956.541 0.000, 6320...</td>\n      <td>109914</td>\n    </tr>\n    <tr>\n      <th>329</th>\n      <td>183211</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>POLYGON Z ((635833.726 5596065.489 0.000, 6358...</td>\n      <td>87020</td>\n    </tr>\n  </tbody>\n</table>\n<p>330 rows × 7 columns</p>\n</div>"
+      "text/plain": "         ID  CROP                     LC  CODE  IRRIGATION  \\\n0      1877     1  Maize (for livestock)   201           0   \n1      1878     1  Common wheat (winter)   311           0   \n2      1879     1  Maize (for livestock)   201           0   \n3      1880     1  Grassland (temporary)    62           0   \n4      3251     1        Barley (winter)   321           0   \n..      ...   ...                    ...   ...         ...   \n325  183204     0        Not agriculture    20           0   \n326  183206     0        Not agriculture    19           0   \n327  183208     0        Not agriculture    19           0   \n328  183210     0        Not agriculture     6           0   \n329  183211     0        Not agriculture     6           0   \n\n                                              geometry  \n0    POLYGON ((634719.076 5591248.019, 634788.109 5...  \n1    POLYGON ((634996.603 5591774.690, 635051.974 5...  \n2    POLYGON ((635196.857 5591331.590, 635199.724 5...  \n3    POLYGON ((635003.339 5591080.041, 635021.807 5...  \n4    POLYGON ((634708.850 5590509.262, 634710.400 5...  \n..                                                 ...  \n325  POLYGON Z ((634030.058 5595825.237 0.000, 6340...  \n326  POLYGON Z ((627815.480 5595734.706 0.000, 6278...  \n327  POLYGON Z ((628489.484 5595844.131 0.000, 6284...  \n328  POLYGON Z ((632038.546 5595956.541 0.000, 6320...  \n329  POLYGON Z ((635833.726 5596065.489 0.000, 6358...  \n\n[330 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>CROP</th>\n      <th>LC</th>\n      <th>CODE</th>\n      <th>IRRIGATION</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1877</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((634719.076 5591248.019, 634788.109 5...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1878</td>\n      <td>1</td>\n      <td>Common wheat (winter)</td>\n      <td>311</td>\n      <td>0</td>\n      <td>POLYGON ((634996.603 5591774.690, 635051.974 5...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1879</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((635196.857 5591331.590, 635199.724 5...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1880</td>\n      <td>1</td>\n      <td>Grassland (temporary)</td>\n      <td>62</td>\n      <td>0</td>\n      <td>POLYGON ((635003.339 5591080.041, 635021.807 5...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3251</td>\n      <td>1</td>\n      <td>Barley (winter)</td>\n      <td>321</td>\n      <td>0</td>\n      <td>POLYGON ((634708.850 5590509.262, 634710.400 5...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>183204</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>20</td>\n      <td>0</td>\n      <td>POLYGON Z ((634030.058 5595825.237 0.000, 6340...</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>183206</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>POLYGON Z ((627815.480 5595734.706 0.000, 6278...</td>\n    </tr>\n    <tr>\n      <th>327</th>\n      <td>183208</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>19</td>\n      <td>0</td>\n      <td>POLYGON Z ((628489.484 5595844.131 0.000, 6284...</td>\n    </tr>\n    <tr>\n      <th>328</th>\n      <td>183210</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>POLYGON Z ((632038.546 5595956.541 0.000, 6320...</td>\n    </tr>\n    <tr>\n      <th>329</th>\n      <td>183211</td>\n      <td>0</td>\n      <td>Not agriculture</td>\n      <td>6</td>\n      <td>0</td>\n      <td>POLYGON Z ((635833.726 5596065.489 0.000, 6358...</td>\n    </tr>\n  </tbody>\n</table>\n<p>330 rows × 6 columns</p>\n</div>"
      },
      "metadata": {}
     }
    ],
    "source": [
+    "in_situ_file = f'{vector_path}WALLONIA_2018_IN_SITU_ROI.shp'\n",
+    "\n",
     "in_situ_gdf.to_file(in_situ_file)\n",
     "\n",
     "display(in_situ_gdf)"
