--- a/notebooks/data_manipulation.ipynb
+++ b/notebooks/data_manipulation.ipynb
@@ -5,17 +5,12 @@
    "id": "prompt-india",
    "metadata": {},
    "source": [
-    "# Data Manipulations\n",
-    "\n",
-    "- Author : Nicolas Deffense\n",
-    "- Year : 2020-2021\n",
-    "\n",
-    "## Import packages & check version"
+    "# Data Manipulations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "occupational-serum",
    "metadata": {},
    "outputs": [
@@ -23,7 +18,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nRasterio : 1.1.0\nRasterstats : 0.14.0\nMatplotlib : 3.3.2\nScipy : 1.5.2\n"
+      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nRasterio : 1.1.0\nRasterstats : 0.14.0\nMatplotlib : 3.3.4\nScipy : 1.5.2\n"
      ]
     }
    ],
@@ -44,6 +39,7 @@
     "import rasterstats\n",
     "from rasterstats import zonal_stats\n",
     "import scipy\n",
+    "from pathlib import Path\n",
     "\n",
     "print(f'Numpy : {np.__version__}')\n",
     "print(f'Pandas : {pd.__version__}')\n",
@@ -55,59 +51,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "unlikely-checkout",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Improving plot image quality and resolution\n",
-    "\n",
-    "%config InlineBackend.figure_format = 'retina'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "oriented-halifax",
    "metadata": {},
    "source": [
-    "## Set paths\n",
-    "- Where are stored your data ?\n",
-    "- Where do you want to store the data you will create ?"
+    "## Set paths for input and output directories\n",
+    "\n",
+    "Create directories if there are missing using `Path` and `mkdir`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "stainless-healthcare",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Directory already exists !\n"
+      "Vector input path is set to : /Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/\nRaster input path is set to : /Users/Nicolas/OneDrive - UCL/LBRAT2104/RASTER/\nOutput path is set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/\n"
      ]
     }
    ],
    "source": [
-    "# Change with your group letter and your name\n",
-    "\n",
     "grp_letter   = 'X'\n",
     "student_name = 'ndeffense'\n",
     "\n",
-    "# Directory \"data\" are read-only for students - you cannot write inside !\n",
-    "\n",
-    "input_path  = 'X:/data/'\n",
-    "\n",
-    "raster_path = f'{input_path}RASTER/'\n",
-    "vector_path = f'{input_path}VECTOR/'\n",
-    "\n",
-    "\n",
-    "# Create a directory to store your data from TP\n",
-    "\n",
+    "# When you are connected to the computer room\n",
+    "'''\n",
+    "raster_path = 'X:/data/RASTER/'\n",
+    "vector_path = 'X:/data/VECTOR/'\n",
     "output_path = f'X:/GROUP_{grp_letter}/TP/{student_name}/DATA/'\n",
-    "\n"
+    "'''\n",
+    "\n",
+    "# When you are connected to your personnal computer\n",
+    "raster_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/RASTER/'\n",
+    "vector_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/'\n",
+    "output_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
+    "\n",
+    "\n",
+    "print(f'Vector input path is set to : {vector_path}')\n",
+    "print(f'Raster input path is set to : {raster_path}')\n",
+    "print(f'Output path is set to       : {output_path}')\n",
+    "\n",
+    "\n",
+    "Path(output_path).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -981,12 +970,8 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.10 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "f0e28a9f57cc69af1651c7aedc5defce74c820bac7dd44d1c823cf08787b6b31"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   },
   "language_info": {
    "codemirror_mode": {
