--- a/notebooks/in_situ_sampling_design.ipynb
+++ b/notebooks/in_situ_sampling_design.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "# In-Situ Sampling Design"
+    "# In-situ prepration for Classification"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -138,7 +138,9 @@
   },
   {
    "source": [
-    "### 1.1 Apply a negative buffer in cropland polygons to avoid border effects"
+    "### 1.1 Apply a negative buffer\n",
+    "\n",
+    "This step is useful to avoid border effects"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -167,7 +169,9 @@
   },
   {
    "source": [
-    "### 1.1.1 Explode MultiPolygon geometry into individual Polygon geometries using `GeoPandas` and `Shapely`\n"
+    "### 1.1.1 Explode *MultiPolygon* geometry into individual *Polygon* geometries using `GeoPandas` and `Shapely`\n",
+    "\n",
+    "*MultiPolygons* geometries can cause problems later on (e.g. for rasterisation) !"
    ],
    "cell_type": "markdown",
    "metadata": {}
