readme + start zonal stats

--- a/notebooks/timeseries_analysis.ipynb
+++ b/notebooks/timeseries_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "macro-valuation",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Pandas : 1.1.5\nGeoPandas : 0.8.1\nMatplotlib : 3.3.2\nScipy : 1.5.2\n"
+      "Pandas : 1.1.5\nGeoPandas : 0.8.1\nMatplotlib : 3.3.4\nScipy : 1.5.2\n"
      ]
     }
    ],
@@ -2381,13 +2381,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "f0e28a9f57cc69af1651c7aedc5defce74c820bac7dd44d1c823cf08787b6b31"
-    }
-   }
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   },
   "language_info": {
    "codemirror_mode": {
