--- a/notebooks/data_manipulation.ipynb
+++ b/notebooks/data_manipulation.ipynb
@@ -969,9 +969,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   },
   "language_info": {
    "codemirror_mode": {
