--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
-    }
-   }
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   }
  },
  "nbformat": 4,
