new sentinel2 prepro with multiple file

--- a/notebooks/geopandas_basics.ipynb
+++ b/notebooks/geopandas_basics.ipynb
@@ -16,6 +16,11 @@
   "kernelspec": {
    "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
    "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
@@ -34,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
