--- a/notebooks/loops_multiple_images.ipynb
+++ b/notebooks/loops_multiple_images.ipynb
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nRasterio : 1.1.0\nRasterstats : 0.14.0\nMatplotlib : 3.3.2\n"
+      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nRasterio : 1.1.0\nRasterstats : 0.14.0\nMatplotlib : 3.3.4\n"
      ]
     }
    ],
@@ -684,13 +684,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
-    }
-   }
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -702,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
